--- a/assets/css/themes/default-variables.css
+++ b/assets/css/themes/default-variables.css
@@ -10,9 +10,9 @@
   --typo-heading: 'Inter';
 
   /* Media Queries */
-  --media-smartphone: 640px;
-  --media-tablet: 769px;
-  --media-laptop: 1024px;
-  --media-desktop: 1280px;
-  --media-landscape: 1536px;
+  --media-xs: $media-xs;
+  --media-sm: $media-sm;
+  --media-md: $media-md;
+  --media-lg: $media-lg;
+  --media-xl: $media-xl;
 }
