--- a/assets/css/core/reset.css
+++ b/assets/css/core/reset.css
@@ -84,7 +84,7 @@ body {
   font-size: 100%;
   font-family: var(--typo-text);
   color: var(--color-text);
-  line-height: 1.4rem;
+  line-height: 1.4;
   hyphens: auto;
   font-smooth: always;
   -webkit-font-smoothing: antialiased;
