--- a/assets/css/themes/default-variables.css
+++ b/assets/css/themes/default-variables.css
@@ -9,6 +9,21 @@
   --typo-text: 'Inter';
   --typo-heading: 'Inter';
 
+  --typo-display-1: 6rem;
+  --typo-display-2: 5.5rem;
+  --typo-display-3: 5rem;
+  --typo-display-4: 4.5rem;
+  --typo-display-5: 4rem;
+  --typo-display-6: 3.5rem;
+  --typo-h1: 3rem;
+  --typo-h2: 2.5rem;
+  --typo-h3: 2rem;
+  --typo-h4: 1.5rem;
+  --typo-h5: 1.25rem;
+  --typo-h6: 1rem;
+  --typo-small: .75rem;
+
+
   /* Media Queries */
   --media-xs: $media-xs;
   --media-sm: $media-sm;
