--- a/assets/css/core/reset.css
+++ b/assets/css/core/reset.css
@@ -90,3 +90,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+strong {
+  font-size: inherit;
+  font-weight: bold;
+}
